# vector_ssau_2C1S_lab1

./: .gitignore  CMakeLists.txt  Vector_lab.sln
Vector_lab/: CMakeLists.txt  Vector.cpp  Vector.h  Vector_lab.vcxproj  main.cpp
