cmake_minimum_required(VERSION 3.1)
link_directories(${CMAKE_BINARY_DIR}/Vector_lab)
project("vector_ssau" CXX)
if (MVSC)
	if (CMAKE_C_FLAGS MATCHES "/W[0-4]")
		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_CPP_FLAGS}")
	else ()
		set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} /W4")
	endif ()
	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
	add_compile_options(/experimental:external /external:anglebrackets /external:W0)
elseif (CMAKE_COMPILER_IS_GNUCC)
	set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -Wall-Wconversion-Wextra-Wpedantic")
endif ()


add_subdirectory("Vector_lab")
add_subdirectory("tst")
add_subdirectory("lib/googletest")